--- a/cultpodcasts/src/app/episode-podcast-links/episode-podcast-links.component.sass
+++ b/cultpodcasts/src/app/episode-podcast-links/episode-podcast-links.component.sass
@@ -3,5 +3,6 @@
     flex-direction: row
     flex-wrap: nowrap
     align-items: center
+    height: var(--mdc-icon-button-state-layer-size, 40px)
 .not
     filter: opacity(0.5)
